# NanoShape

./: .gitignore  CMakeLists.txt  LICENSE  NanoShapeExample.pro  README.md
example/: CMakeLists.txt  NanoShapeExample.cpp  NanoShapeExample.h  NanoShapeForeignTypes.h  example.pro  main.cpp  main.qml
nanoshape/: .clang-format  CMakeLists.txt  nanoshape.pri  nanoshape.pro
nanoshape/include/: NanoBrush.h  NanoPainter.h  NanoShape.h
nanoshape/nanovg/: .clang-format  nanovg.c  nanovg.h
nanoshape/shaders/: NanoLegacyShader.frag  NanoLegacyShader.vert  NanoLegacyShaders.qrc  NanoShader.frag  NanoShader.frag.qsb  NanoShader.vert  NanoShader.vert.qsb  NanoShaderGLES.frag  NanoShaderGLES.vert  NanoShaders.qrc  NanoShadersGLES.qrc  compile.cmd
nanoshape/src/: NanoBrush.cpp  NanoMaterial.cpp  NanoMaterial.h  NanoPainter.cpp  NanoShape.cpp
